apps/servarr/prowlarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: servarr
spec:
  type: ClusterIP
  selector:
    app: prowlarr
  ports: 
  - name: prowlarr
    protocol: TCP
    port: 9696
    targetPort: 9696

  - name: flaresolverr
    protocol: TCP
    port: 8191
    targetPort: 8191
